tests/compile_fail/duplicated_attr.stderr
error: duplicate #[thisctx(skip)] option
 --> tests/compile_fail/duplicated_attr.rs:6:15
  |
6 |     #[thisctx(skip)]
  |               ^^^^
